# monkeyframe

./: .gitignore  DataFrame.py  LICENSE  README.md  example.py  new_benchmarks.py  pyproject.toml  setup.py  test_fillna.py
monkeyframe/: __init__.py  dataframe.py  demo.py  encoders.py  exceptions.py  groupby.py  index.py  merge.py  ml.py  series.py  setup.py  utils.py
monkeyframe/monkeyframe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
monkeyframe/monkeyframe_rust_grouper/: Cargo.toml
monkeyframe/monkeyframe_rust_grouper/src/: lib.rs
monkeyframe/monkeyframe_rust_grouper_v2/: Cargo.toml
monkeyframe/monkeyframe_rust_grouper_v2/src/: lib.rs
monkeyframe/monkeyframe_rust_grouper_v3/: Cargo.toml
monkeyframe/monkeyframe_rust_grouper_v3/src/: lib.rs
monkeyframe/tests/: test_arrow.py  test_dataframe.py  test_dataframe_info_describe.py  test_dataframe_ops.py  test_dtypes.py  test_encoders.py  test_groupby.py  test_merge.py  test_ml.py
