[package]
name = "monkeyframe_rust_grouper_v3"
version = "0.1.0"
edition = "2021"

[lib]
name = "monkeyframe_rust_grouper_v3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
arrow = { version = "52.2.0" }
ahash = "0.8.6"
rayon = "1.8.0"
numpy = "0.19.0"
